--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <option value="Kolhapur">Kolhapur</option>
             <option value="Sangli">Sangli</option>
             <option value="Jalgaon">Jalgaon</option>
-            <option value="Ahmednagar">AhilyaNagar</option>
+            <option value="AhilyaNagar">AhilyaNagar</option>
             <option value="Satara">Satara</option>
             <option value="Ratnagiri">Ratnagiri</option>
             <option value="Latur">Latur</option>
